--- a/src/pug/sections/_partnership.pug
+++ b/src/pug/sections/_partnership.pug
@@ -36,12 +36,12 @@
 					.h3 Сферы применения государственно-частного партнерства:
 
 					.three-col-grid
-						+simple-card('folder', 'Здравоохранение')(class="fly-center")
-						+simple-card('folder', 'Коммунальная инфраструктура')(class="fly-center")
-						+simple-card('folder', 'Транспортная инфраструктура')(class="fly-center")
-						+simple-card('folder', 'Образование, наука, культура, спорт')(class="fly-center")
-						+simple-card('folder', 'Туристическая инфраструктура')(class="fly-center")
-						+simple-card('folder', 'Экологическая инфраструктура')(class="fly-center")
+						+simple-card('medical', 'Здравоохранение')(class="fly-center")
+						+simple-card('benefit2', 'Коммунальная инфраструктура')(class="fly-center")
+						+simple-card('benefit3', 'Транспортная инфраструктура')(class="fly-center")
+						+simple-card('benefit4', 'Образование, наука, культура, спорт')(class="fly-center")
+						+simple-card('benefit5', 'Туристическая инфраструктура')(class="fly-center")
+						+simple-card('benefit6', 'Экологическая инфраструктура')(class="fly-center")
 		
 		
 				//====== отдельный раздел  =====
