--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -232,6 +232,9 @@ svg{transition: .3s;}
 	height: 38px;
 	fill:#A9ADC6;
 }
+.svg-benefit5{
+	height: 29px;
+}
 [class^="svg-icon_"]{
 	fill:#767DA2;
 	width: 39px;
