--- a/src/scss/sections/_header-inner.scss
+++ b/src/scss/sections/_header-inner.scss
@@ -34,6 +34,6 @@
 	@media (max-width: 767px) {
 		padding: 30px 20px;
 		align-items: flex-start;
-		.gradient-box{width: fit-content; }
+		.gradient-box{width: fit-content; min-width: 290px;}
 	}
 }
