--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -104,3 +104,12 @@
 		}
 	}
 }
+.mini-btn{
+	width: 54px;
+	height: 54px;
+	border-radius: 12px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border:1px solid $sec;
+}
