--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -332,9 +332,22 @@ input.valid, input:focus{border: 1px solid $sec1;}
 
 .mySelect-drop {
   display: flex;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 5px;
+  
+  transform: translateY(100%);
+  z-index: 2;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  p{
+    width: 100%;
+    height: 54px;
+    line-height: 54px;
+    color: $sec1;
+  }
 }
 
 .mySelect input {
@@ -349,7 +362,7 @@ input.valid, input:focus{border: 1px solid $sec1;}
 }
 .mySelect-input{
   position: relative;
-  z-index: 2;
+  z-index: 3;
   input{padding-right: 35px;}
   
 }
@@ -393,6 +406,7 @@ input.valid, input:focus{border: 1px solid $sec1;}
 
 .mySelect-drop.active {
   display: block;
+  
 }
 
 .mySelect-icon {
