--- a/src/pug/sections/_calculate.pug
+++ b/src/pug/sections/_calculate.pug
@@ -30,207 +30,199 @@
 				
 				//====== FORM ==========================
 				form.calculator-form
-					
-					//==== form-block  Тип организации =====
-					.calculator-form__group.flex-center
-						.large-card
-							.project-card
-								.project-card__head
-									.body-bold  Тип организации
-									
-								.project-card__footer
-									p Выберите тип организации
-
-							.large-card__text
-								.form-checkbox
-									label.fl-column
-										input(type="checkbox" name="name_1")
-										.form-item__pic
-											svg.svg-icon_1
-												use(href="./img/spriteSvg.svg#svg-icon_1")
-										.body-5 Микропредприятие
-								+calc-check('checkbox', '2', 2,'Малое предприятие')
-								+calc-check('checkbox', '3', 3,'Среднее предприятие')
-								+calc-check('checkbox', '4', 4,'Крупное предприятие')
-					
-					//==== form-block Тип поддержки =====
-					.calculator-form__group.flex-center
-						.large-card
-							.project-card
-								.project-card__head
-									.body-bold  Тип поддержки
-									
-								.project-card__footer
-									p Выберите тип поддержки
-
-							.large-card__text
-								
-								+calc-check('checkbox', '5', 5,'Консультационная')
-								+calc-check('checkbox', '6', 6,'Налоговая')
-								+calc-check('checkbox', '7', 7,'Кредиты и займы')
-								+calc-check('checkbox', '8', 8,'Субсидия')
-								+calc-check('checkbox', '9', 9,'Имущественная')
-								+calc-check('checkbox', '10', 10,'Образовательная')
-								
-					
-					//==== Отрасль реализации инвестиционного проекта =====
-					.calculator-form__group
-
-						.large-card.switch-block
-							.project-card
-								.project-card__head
-									.body-bold  Отрасль реализации инвестиционного проекта
-									
-									//==== переключатель отрасль / оквэд
-									label.switch-item.switch-toggle
-										p Отрасль
-										input(type="checkbox" checked)
-										.switch-item__toggle
-											span
-											span
-										p ОКВЭД
-								
-								    
-									//==== переключатель отраслей, которые отображаются по 9 штук в правой колонке внутри .industry-grid__block =====
-									.categories-page-toggle
-										button.circle-button.active
-										button.circle-button
-										button.circle-button
-								
-								
-								.project-card__footer
-									p Выберите тип организации
-
-							
-							.large-card__text
-								.switch-content_of.active
-									.industry-grid__block
-										+calc-check('checkbox', '5', 5,'Консультационная')
-										+calc-check('checkbox', '6', 6,'Налоговая')
-										+calc-check('checkbox', '7', 7,'Кредиты и займы')
-										+calc-check('checkbox', '8', 8,'Субсидия')
-										+calc-check('checkbox', '9', 9,'Имущественная')
-										+calc-check('checkbox', '10', 10,'Образовательная')
-										+calc-check('checkbox', '8', 8,'Субсидия')
-										+calc-check('checkbox', '9', 9,'Имущественная')
-										+calc-check('checkbox', '10', 10,'Образовательная')
-								
-								
-								.switch-content_on
-									
-									.form-item.form-item-okved
+					.calculator-form-page
+						//==== form-block  Тип организации =====
+						.calculator-form__group.flex-center
+							.large-card
+								.project-card
+									.project-card__head
+										.body-bold  Тип организации
 										
-										.mySelect.mySelect-okved
-											.mySelect-okved__row
-												.mySelect-input
-													.mySelect-okved-group
-														//===== выбранные коды =======
-														.selectValue
-															
-															//===== single number ===== =======
-															.tag
-																span 05
-																span
-																	svg.svg-cross
-																		use(href="../img/spriteSvg.svg#svg-cross")
-															//===== single number ===== =======
-															.tag
-																span 05
-																span
-																	svg.svg-cross
-																		use(href="../img/spriteSvg.svg#svg-cross")
-															
-															
-															//===== total ===== =======
-															span.total-tags  +25
-															
-													//==== кнопка, открывающая drop список=====
-													button.mySelect-icon.mini-btn
-														svg.svg-down
-															use(href="./img/spriteSvg.svg#svg-down")
-												
-												.mySelect-okved-btns
-													//==== кнопка, очистить выбранные данные =====
-													button.btn.clean-selectValue.visible
-														span Очистить все
-														svg.svg-close
-															use(href="./img/spriteSvg.svg#svg-close")
-													
-													//==== кнопка, открывающая список кодов ОКВЭД в модальном окне=====
-													button.mini-btn 111
+									.project-card__footer
+										p Выберите тип организации
+
+								.large-card__text
+									.form-checkbox
+										label.fl-column
+											input(type="checkbox" name="name_1")
+											.form-item__pic
+												svg.svg-icon_1
+													use(href="./img/spriteSvg.svg#svg-icon_1")
+											.body-5 Микропредприятие
+									+calc-check('checkbox', '2', 2,'Малое предприятие')
+									+calc-check('checkbox', '3', 3,'Среднее предприятие')
+									+calc-check('checkbox', '4', 4,'Крупное предприятие')
+						
+						//==== form-block Тип поддержки =====
+						.calculator-form__group.flex-center
+							.large-card
+								.project-card
+									.project-card__head
+										.body-bold  Тип поддержки
+										
+									.project-card__footer
+										p Выберите тип поддержки
+
+								.large-card__text
+									
+									+calc-check('checkbox', '5', 5,'Консультационная')
+									+calc-check('checkbox', '6', 6,'Налоговая')
+									+calc-check('checkbox', '7', 7,'Кредиты и займы')
+									+calc-check('checkbox', '8', 8,'Субсидия')
+									+calc-check('checkbox', '9', 9,'Имущественная')
+									+calc-check('checkbox', '10', 10,'Образовательная')
+									
+						
+						//==== Отрасль реализации инвестиционного проекта =====
+						.calculator-form__group
+							.large-card.switch-block
+								.project-card
+									.project-card__head
+										.body-bold  Отрасль реализации инвестиционного проекта
+										
+										//==== переключатель отрасль / оквэд
+										label.switch-item.switch-toggle
+											p Отрасль
+											input(type="checkbox" checked)
+											.switch-item__toggle
+												span
+												span
+											p ОКВЭД
+									
+										
+										//==== переключатель отраслей, которые отображаются по 9 штук в правой колонке внутри .industry-grid__block =====
+										.categories-page-toggle
+											button.circle-button.active
+											button.circle-button
+											button.circle-button
+									
+									
+									.project-card__footer
+										p Выберите тип организации
+
+								
+								.large-card__text
+									//=======контент для ОТРАСЛЬ ========
+									.switch-content_of.active
+										.industry-grid__block
+											+calc-check('checkbox', '5', 5,'Консультационная')
+											+calc-check('checkbox', '6', 6,'Налоговая')
+											+calc-check('checkbox', '7', 7,'Кредиты и займы')
+											+calc-check('checkbox', '8', 8,'Субсидия')
+											+calc-check('checkbox', '9', 9,'Имущественная')
+											+calc-check('checkbox', '10', 10,'Образовательная')
+											+calc-check('checkbox', '8', 8,'Субсидия')
+											+calc-check('checkbox', '9', 9,'Имущественная')
+											+calc-check('checkbox', '10', 10,'Образовательная')
+									
+									
+									//=======контент для ОКВЭД========
+									.switch-content_on
+										.form-item.form-item-okved
 											
-											//====  drop список=====
-											.mySelect-drop
-												//===== Если нет значений, отображается тег <p> с текстом  Нет данных
-												
-												ul
+											.mySelect.mySelect-okved
+												.mySelect-okved__row
+													.mySelect-input
+														.mySelect-okved-group
+															//===== выбранные коды =======
+															.selectValue
+																
+																//===== single number ===== =======
+																.tag
+																	span 05
+																	span
+																		svg.svg-cross
+																			use(href="../img/spriteSvg.svg#svg-cross")
+																//===== single number ===== =======
+																.tag
+																	span 05
+																	span
+																		svg.svg-cross
+																			use(href="../img/spriteSvg.svg#svg-cross")
+																
+																
+																//===== total ===== =======
+																span.total-tags  +25
+																
+														//==== кнопка, открывающая drop список=====
+														button.mySelect-icon.mini-btn
+															svg.svg-down
+																use(href="./img/spriteSvg.svg#svg-down")
 													
-													li
+													.mySelect-okved-btns
+														//==== кнопка, очистить выбранные данные =====
+														button.btn.clean-selectValue.visible
+															span Очистить все
+															svg.svg-close
+																use(href="./img/spriteSvg.svg#svg-close")
 														
-														p Нет данных
-													li
-														.form-checkbox.okved-item
-															label
-																input(type="checkbox" name="" checked )
-																span.fake-checkbox
-																span.okved-num 05
-																p.okved-name Добыча угля
-													li
-														.form-checkbox.okved-item
-															label
-																input(type="checkbox" name="" checked )
-																span.fake-checkbox
-																span.okved-num 06
-																p.okved-name Добыча сырой нефти и природного газа
-													li
-														.form-checkbox.okved-item
-															label
-																input(type="checkbox" name="")
-																span.fake-checkbox
-																span.okved-num B
-																p.okved-name Добыча полезных ископаемых
-													li
-														.form-checkbox.okved-item
-															label
-																input(type="checkbox" name="")
-																span.fake-checkbox
-																span.okved-num 03.1
-																p.okved-name Рыболовство
-										
-													li
-														.form-checkbox.okved-item
-															label
-																input(type="checkbox" name="")
-																span.fake-checkbox
-																span.okved-num 03.2
-																p.okved-name Рыболовство
-										
-													li
-														.form-checkbox.okved-item
-															label
-																input(type="checkbox" name="")
-																span.fake-checkbox
-																span.okved-num 01.1
-																p.okved-name Выращивание однолетних культур
-										
-										
+														//==== кнопка, открывающая список кодов ОКВЭД в модальном окне=====
+														button.mini-btn 111
+												
+												//====  drop список=====
+												.mySelect-drop
+													//===== Если нет значений, отображается тег <p> с текстом  Нет данных
+													
+													ul
+														
+														li
+															
+															p Нет данных
+														li
+															.form-checkbox.okved-item
+																label
+																	input(type="checkbox" name="" checked )
+																	span.fake-checkbox
+																	span.okved-num 05
+																	p.okved-name Добыча угля
+														li
+															.form-checkbox.okved-item
+																label
+																	input(type="checkbox" name="" checked )
+																	span.fake-checkbox
+																	span.okved-num 06
+																	p.okved-name Добыча сырой нефти и природного газа
+														li
+															.form-checkbox.okved-item
+																label
+																	input(type="checkbox" name="")
+																	span.fake-checkbox
+																	span.okved-num B
+																	p.okved-name Добыча полезных ископаемых
+														li
+															.form-checkbox.okved-item
+																label
+																	input(type="checkbox" name="")
+																	span.fake-checkbox
+																	span.okved-num 03.1
+																	p.okved-name Рыболовство
+											
+														li
+															.form-checkbox.okved-item
+																label
+																	input(type="checkbox" name="")
+																	span.fake-checkbox
+																	span.okved-num 03.2
+																	p.okved-name Рыболовство
+											
+														li
+															.form-checkbox.okved-item
+																label
+																	input(type="checkbox" name="")
+																	span.fake-checkbox
+																	span.okved-num 01.1
+																	p.okved-name Выращивание однолетних культур
+											
+											
 
 
-							script.
-								const switchBlocks = document.querySelectorAll('.switch-block');
-								if(switchBlocks.length > 0){
-									for(let item of switchBlocks){
-										const switchToggle = item.querySelector('input');
-										const switchContentOf = item.querySelector('.switch-content_of');
-										const switchContentOn = item.querySelector('.switch-content_on');
-										if(!switchToggle.checked){
-											switchContentOf.classList.add('active');
-											switchContentOn.classList.remove('active');
-										}else{
-											switchContentOf.classList.remove('active');
-											switchContentOn.classList.add('active');
-										}
-										item.addEventListener('click', ()=>{
+								script.
+									const switchBlocks = document.querySelectorAll('.switch-block');
+									if(switchBlocks.length > 0){
+										for(let item of switchBlocks){
+											const switchToggle = item.querySelector('input');
+											const switchContentOf = item.querySelector('.switch-content_of');
+											const switchContentOn = item.querySelector('.switch-content_on');
 											if(!switchToggle.checked){
 												switchContentOf.classList.add('active');
 												switchContentOn.classList.remove('active');
@@ -238,10 +230,32 @@
 												switchContentOf.classList.remove('active');
 												switchContentOn.classList.add('active');
 											}
-										})
+											item.addEventListener('click', ()=>{
+												if(!switchToggle.checked){
+													switchContentOf.classList.add('active');
+													switchContentOn.classList.remove('active');
+												}else{
+													switchContentOf.classList.remove('active');
+													switchContentOn.classList.add('active');
+												}
+											})
+										}
+										
 									}
-									
-								}
+						
+						.calculator-form-footer.fl-block
+							button.btn(type="button")
+								span Очистить фильтры
+								svg.svg-reload
+									use(href="./img/spriteSvg.svg#svg-reload")
+							
+							.fly-center
+								button.btn-accent(type="button")
+									span Далее
+									svg.chevron-right
+										use(href="./img/spriteSvg.svg#chevron-right")
+								
+								.calculator-page 1/2
 					
 					
 					p.body-reg В целях координации деятельности органов исполнительной власти Нижегородской области в сфере государственно-частного партнерства и концессии принято постановление Правительства Нижегородской области от 27.10.2016 № 722 «О подготовке и реализации проектов на основе концессионных соглашений и соглашений о государственно-частном партнерстве, а также проведении оценки эффективности проекта муниципально-частного партнерства и определении его сравнительного преимущества».
