--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -15,7 +15,7 @@
 	color: white;
 	font-family: $semi;
 	white-space: nowrap;
-	svg{fill: #fff; width: 20px;}
+	svg{fill: #fff; width: 20px;height: 20px;}
 	.svg-link{width: 18px; height: 18px;}
 	@media (max-width: 1199px) {
 	  height: 46px;
