--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -172,6 +172,7 @@ input.valid, input:focus{border: 1px solid $sec1;}
       background-size: auto;
       transition: .3s;
       flex-shrink: 0;
+      display: block;
     }
 
     input[type="checkbox"]:checked+span.fake-checkbox {
@@ -204,6 +205,7 @@ input.valid, input:focus{border: 1px solid $sec1;}
     background-size: auto;
     transition: .3s;
     flex-shrink: 0;
+    display: block;
   }
 
   span+span {
