--- a/src/scss/sections/_calculate.scss
+++ b/src/scss/sections/_calculate.scss
@@ -88,6 +88,9 @@
 	@media (max-width: 767px) {
 		grid-template-columns: 1fr;
 		gap: 10px;
+		position: relative;
+		label{padding-right: 20px;}
+		
 	}
 }
 .categories-page-toggle{
@@ -96,8 +99,8 @@
 	column-gap: 10px;
 	@media (max-width: 767px) {
 		position: absolute;
-		right: 15px;
-		top: 230px;
+		right: -5px;
+		top: 0;
 		flex-direction: column;
 		margin-top: 0!important;
 		row-gap: 10px;
@@ -168,7 +171,7 @@
 	.mySelect-okved__row{
 		display: flex;
 		column-gap: 10px;
-		@media(max-width:1599px) {
+		@media(max-width:1279px) {
 			flex-direction: column-reverse;
 			row-gap:10px;
 		}
@@ -179,7 +182,7 @@
 	.mySelect-okved-btns{
 		display: flex;
 		column-gap:10px;
-		@media(max-width:1599px) {
+		@media(max-width:1279px) {
 			justify-content: flex-end;
 			@media (max-width: 767px) {
 			justify-content: flex-start;
@@ -196,9 +199,14 @@
 		height: 54px;
 		span{
 			display: none;
-			@media(max-width:1599px){
+			@media(max-width:1279px){
 				display: block;
 			}
+		}
+		@media (max-width: 1279px) {
+		  max-width: unset;
+		  width: auto;
+		  flex-grow:1;
 		}
 	}
 	.clean-selectValue.visible{display: flex;}
@@ -211,7 +219,17 @@
 	padding: 30px;
 	margin-top: 20px;
 	justify-content: space-between;
-	[class^='btn']{width: auto;}
+	[class^='btn']{
+		width: auto;
+		@media (max-width: 767px) {
+			width: 54px;
+			height: 54px;
+		 span{display: none;}
+		}
+	}
+	@media (max-width: 767px) {
+		padding: 20px;
+	}
 }
 
 .calculator-page {margin-left: 10px;}
@@ -219,7 +237,13 @@
 .okved-modal{
 	
 	.modal-frame{overflow: hidden; padding: 0;background-color: #fff;}
-	.h2{margin-bottom: 0;}
+	.h2{
+		margin-bottom: 0;
+		@media (max-width: 767px) {
+		  font-size: 16px;
+		 	max-width: 282px;
+		}
+	}
 	
 	.okved-modal__top,.okved-modal__title{
 		justify-content: space-between;
@@ -230,6 +254,9 @@
 	.okved-modal__header{
 		padding: 40px 40px 0;
 		background-color: #fff;
+		@media (max-width: 767px) {
+			padding: 20px 20px 0;
+		}
 	}
 	.okved-modal__top{
 		padding-bottom: 30px;
@@ -357,5 +384,15 @@
 			box-shadow: 0px -4px 20px 0px rgba(169, 173, 198, 0.30);
 		}
 		
+	}
+}
+.btn.okved-modal-clean{
+	@media (max-width: 991px) {
+		width: 54px;
+		height: 54px;
+		span{	
+			display: none;
+			
+		}
 	}
 }
